Added checking for new page & getting arguments form console

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ PDFcreator/PDFcreator/file\.pdf
 
 PDFcreator/PDFcreator/Debug
 
+PDFcreator/PDFcreator/Release
+
+PDFcreator/Release
+
 PDFcreator/Debug
 
 PDFcreator/\.vs/PDFcreator
 PDFcreator/.vs/PDFcreator/v15/Browse.VC.db
+PDFcreator/PDFcreator/archive\.pdf
