--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ PDFcreator/Debug
 PDFcreator/\.vs/PDFcreator
 PDFcreator/.vs/PDFcreator/v15/Browse.VC.db
 PDFcreator/PDFcreator/archive\.pdf
+
+lab\ 1/.vs
+lab\ 1/Debug
+lab\ 1/Release
+lab\ 1/lab\ 1/Debug
+lab\ 1/lab\ 1/Release
